2006-03-07  David Zeuthen  <davidz@redhat.com>

	* polkit.pc.in: Add libpoluser, libpolgroup and libpoltxtsrc variables

2006-03-07  David Zeuthen  <davidz@redhat.com>

	* polkit.pc.in (Libs): s/-llibpolkit/-lpolkit/

2006-03-07  David Zeuthen  <davidz@redhat.com>

	Initial check-in of PolicyKit
